# tohow-tahto

./: README.md  pyproject.toml
data/clickup_sheet_negocios/: 2024-03-14T20_24_44.665Z Tahto - Carteira De Negocios.xlsx  2024-03-20T16_22_32.149Z Tahto - Carteira De Negocios.xlsx
docs/: index.md
src/: app.py
src/auto/scrapy_clickup/: init_driver.py  init_service.py  login.py  main_scrapy.py  scrapy_xlsx.py
src/auto/scrapy_clickup/data/clickup_sheet_negocios/: 2024-03-15T17_04_23.438Z Tahto - Carteira De Negocios.xlsx  2024-03-20T16_22_32.149Z Tahto - Carteira De Negocios.xlsx
src/static/css/: ftplat.css  login.css  navbar_tools.css  sidebar.css
src/static/js/: datatable_ft.js  ftplat.js  novo_skill.js
src/templates/: HTML.HTML  datatable_ft.html  ftplat.html  index.html  login.html  nova_skills.html  novo_skill_ft.html  register.html  tools.html
