[tool.poetry]
name = "tahto-flask-tohow"
version = "0.1.0"
description = "Unifying actions"
authors = ["venysssssssssss <shablaur7@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
bcrypt = "^4.1.2"
blue = "^0.9.1"
isort = "^5.13.2"
flask-mail = "^0.9.1"
python-dotenv = "^1.0.1"
flask-login = "^0.6.3"
alembic = "^1.13.1"
flask-migrate = "^4.0.5"
flask-cli = "^0.4.0"
mkdocs = "^1.5.3"
selenium = "^4.18.1"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
